# filedrop

./: Cargo.toml  Dioxus.toml  PLAN.md  README.md  backend_PROCESS.md
assets/: main.css
src/: backend.rs  main.rs
src/components/: mod.rs  nav.rs  view.rs
